--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,6 +105,17 @@ a {
   text-decoration: none;
 }
 
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
