Added modal login form

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,3 +121,9 @@ a {
     color-scheme: dark;
   }
 }
+
+/*@media (prefers-color-scheme: light) {*/
+/*  html {*/
+/*    color-scheme: light;*/
+/*  }*/
+/*}*/
